add img-src CSP

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,7 @@
     script-src-elem 'self' 'unsafe-inline';
     style-src 'self' 'unsafe-inline';
     style-src-elem 'self' 'unsafe-inline';
+    img-src 'self' https://cdn.jsdelivr.net https://raw.githubusercontent.com https://camo.githubusercontent.com;
     ">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
