update img-src CSP

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
     script-src-elem 'self' 'unsafe-inline';
     style-src 'self' 'unsafe-inline';
     style-src-elem 'self' 'unsafe-inline';
-    img-src 'self' https://cdn.jsdelivr.net https://raw.githubusercontent.com https://camo.githubusercontent.com;
+    img-src 'self' https://cdn.jsdelivr.net https://raw.githubusercontent.com https://camo.githubusercontent.com *;
     connect-src 'self' https://github-readme-generator-api.onrender.com;
     ">
 
