update bug5.1 - client sever connect

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
     style-src 'self' 'unsafe-inline';
     style-src-elem 'self' 'unsafe-inline';
     img-src 'self' https://cdn.jsdelivr.net https://raw.githubusercontent.com https://camo.githubusercontent.com *;
-    connect-src https://github-readme-generator-api.onrender.com:8000/generate-readme;
+    connect-src https://github-readme-generator-api.onrender.com/generate-readme;
     ">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
